PRM-958 Unit test cases for js (#231)
* PRM-958 Interim commit

* PRM-958  commit from changes in PRM-957

* PRM-958  commit from changes in PRM-957

* PRM-958 intermin commit

* [PRM-958] - Fixed js tests + reverted to Node.JS 12

* [PRM-917] - Add CSRF protection on Upscan endpoints (#229)

* PRM-958 added config changes

* PRM-958 added config changes and csrfToken

Co-authored-by: LewisMitchell <53828896+LewisMitchell@users.noreply.github.com>

--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -62,7 +62,7 @@
 
 @layout(pageTitle = messages("otherReason.uploadEvidence.title"),
     isPageFullWidth = false,
-    customJavaScript = Some("upload/multiFileUpload.js")) {
+    customJavaScript = Some("multiFileUpload.min.js")) {
     <h1 class="govuk-heading-l">@messages("otherReason.uploadEvidence.heading")</h1>
 
     @formHelper(action = postAction,
